Gradle build changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,37 @@
 *.iml
 .gradle
-/local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+.idea/misc.xml
+.idea/codeStyles/Project.xml
+.idea/caches/build_file_checksums.ser
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/misc.xml
+.idea/assetWizardSettings.xml
+.idea/runConfigurations.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/assetWizardSettings.xml
+
+bin/
+gen/
+*.dex
+*.apk
+*.ap_
+*.class
+Thumbs.db
