--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,22 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def room_version = "1.1.1"
 
+    def supprt_lib_version = "28.0.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$supprt_lib_version"
+    implementation "com.android.support:design:$supprt_lib_version"
+    implementation "com.android.support:recyclerview-v7:$supprt_lib_version"
+    implementation "com.android.support:cardview-v7:$supprt_lib_version"
 
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
+    implementation "com.android.support:customtabs:$supprt_lib_version"
+    implementation "com.android.support:support-media-compat:$supprt_lib_version"
+    implementation "com.android.support:support-v4:$supprt_lib_version"
 
     implementation 'com.google.android.gms:play-services-ads:17.1.1'
     implementation('com.google.firebase:firebase-core:16.0.5')
